force-app/main/default/objects/Property__c/fields/Size_in_Sq_Yards__c.field-meta.xml
<CustomField>
    <fullName>Size_in_Sq_Yards__c</fullName>
    <label>Size in Sq. Yards</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>