force-app/main/default/objects/Property__c/fields/Size_in_Sq_Yards_Bigha__c.field-meta.xml
<CustomField>
    <fullName>Size_in_Sq_Yards_Bigha__c</fullName>
    <label>Size in Sq. Yards/ Bigha</label>
    <length>200</length>
    <type>Text</type>
</CustomField>