force-app/main/default/objects/Property__c/fields/Sub_Location__c.field-meta.xml
<CustomField>
    <fullName>Sub_Location__c</fullName>
    <label>Sub Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>