force-app/main/default/objects/Property__c/fields/Super_Builtup_Area__c.field-meta.xml
<CustomField>
    <fullName>Super_Builtup_Area__c</fullName>
    <label>Super Built-up Area(in Sq.Ft.)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>