force-app/main/default/objects/Property__c/fields/Total_No_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Floors__c</fullName>
    <label>Total No. of Floors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>