force-app/main/default/objects/Property__c/fields/Total_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Value__c</fullName>
    <formula>((GST__c  / 100)  *  Amount_Calculation__c ) +  Amount_Calculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>