force-app/main/default/objects/Property__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>Office Space</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
                <isActive>false</isActive>
                <label>4 BHK</label>
            </value>
            <value>
                <fullName>Penthouse</fullName>
                <isActive>false</isActive>
                <label>Penthouse</label>
            </value>
            <value>
                <fullName>Servent</fullName>
                <isActive>false</isActive>
                <label>Servent</label>
            </value>
            <value>
                <fullName>Store</fullName>
                <isActive>false</isActive>
                <label>Store</label>
            </value>
            <value>
                <fullName>Study</fullName>
                <isActive>false</isActive>
                <label>Study</label>
            </value>
            <value>
                <fullName>Villa</fullName>
                <isActive>false</isActive>
                <label>Villa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>