force-app/main/default/objects/Property__c/fields/Type_of_Construction_done__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Construction_done__c</fullName>
    <label>Type of Construction done</label>
    <type>TextArea</type>
</CustomField>