force-app/main/default/objects/Property__c/fields/Type_of_Flooring__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Flooring__c</fullName>
    <label>Type of Flooring</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marble</fullName>
            </value>
            <value>
                <fullName>Granite</fullName>
            </value>
            <value>
                <fullName>Tiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>