force-app/main/default/objects/Property__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water</label>
    <type>Checkbox</type>
</CustomField>