force-app/main/default/objects/Property__c/fields/Water_Source__c.field-meta.xml
<CustomField>
    <fullName>Water_Source__c</fullName>
    <label>Water Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>Borewell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>