force-app/main/default/objects/Property__c/fields/Width_of_Facing_Road_in_Feet__c.field-meta.xml
<CustomField>
    <fullName>Width_of_Facing_Road_in_Feet__c</fullName>
    <label>Width of Facing Road in Feet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>