force-app/main/default/objects/Property__c/fields/Youtube_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Youtube_Video_Link__c</fullName>
    <label>Youtube Video Link</label>
    <type>Url</type>
</CustomField>