force-app/main/default/objects/Property__c/recordTypes/Commercial_Space_Shop.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Space_Shop</fullName>
    <active>true</active>
    <label>Commercial Space / Shop</label>
</RecordType>