force-app/main/default/objects/Property__c/recordTypes/Flat_Apartment.recordType-meta.xml
<RecordType>
    <fullName>Flat_Apartment</fullName>
    <active>true</active>
    <label>Flat / Apartment</label>
</RecordType>