force-app/main/default/objects/Property__c/recordTypes/House_Villa.recordType-meta.xml
<RecordType>
    <fullName>House_Villa</fullName>
    <active>true</active>
    <label>House / Villa</label>
</RecordType>