force-app/main/default/objects/Property__c/recordTypes/Plot_Land.recordType-meta.xml
<RecordType>
    <fullName>Plot_Land</fullName>
    <active>true</active>
    <label>Plot / Land</label>
</RecordType>