force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Owner__c</columns>
    <columns>Title__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Primary_Location__c</columns>
    <columns>Looking_For__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>