force-app/main/default/objects/Property__c/listViews/All_Active_Properties.listView-meta.xml
<ListView>
    <fullName>All_Active_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Owner__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title__c</columns>
    <columns>Looking_For__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Properties</label>
</ListView>