force-app/main/default/objects/Property__c/listViews/All_Properties_Under_Discussion.listView-meta.xml
<ListView>
    <fullName>All_Properties_Under_Discussion</fullName>
    <columns>NAME</columns>
    <columns>Property_Owner__c</columns>
    <columns>Property_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title__c</columns>
    <columns>Looking_For__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Under Discussion</value>
    </filters>
    <label>All Properties Under Discussion</label>
</ListView>