force-app/main/default/objects/Property__c/listViews/All_Sold_Properties.listView-meta.xml
<ListView>
    <fullName>All_Sold_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Owner__c</columns>
    <columns>Title__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </filters>
    <label>All Sold Properties</label>
</ListView>