force-app/main/default/objects/Property__c/listViews/Commercial_Space_Shop.listView-meta.xml
<ListView>
    <fullName>Commercial_Space_Shop</fullName>
    <columns>NAME</columns>
    <columns>Property_Owner__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Looking_For__c</columns>
    <columns>Title__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property__c.Commercial_Space_Shop</value>
    </filters>
    <label>Commercial Space/Shop</label>
</ListView>