force-app/main/default/objects/Property__c/listViews/Flat_Apartment.listView-meta.xml
<ListView>
    <fullName>Flat_Apartment</fullName>
    <columns>NAME</columns>
    <columns>Property_Owner__c</columns>
    <columns>Title__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Primary_Location__c</columns>
    <columns>BHK__c</columns>
    <columns>Size_in_Sq_Foot__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Property_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property__c.Flat_Apartment</value>
    </filters>
    <label>Flat/Apartment</label>
</ListView>