force-app/main/default/objects/Property__c/listViews/Plot_Land.listView-meta.xml
<ListView>
    <fullName>Plot_Land</fullName>
    <columns>NAME</columns>
    <columns>Property_Owner__c</columns>
    <columns>Primary_Location__c</columns>
    <columns>Title__c</columns>
    <columns>Amount__c</columns>
    <columns>Size_in_Sq_Yards_Bigha__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property__c.Plot_Land</value>
    </filters>
    <label>Plot / Land</label>
</ListView>